--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
             <li role="presentation"><a href="contact.html">Contact</a></li>
           </ul>
         </nav>
-        <h3 class="text-muted">Sina's Programming Projects</h3>
+        <h3 class="text-muted">[Student name] Programming Projects</h3>
       </div>
 
       <div class="jumbotron">
@@ -73,7 +73,7 @@
       </div>
 
       <footer class="footer">
-        <p>&copy; 2016 Sina T.</p>
+        <p>&copy; 2016 [Initials]</p>
       </footer>
 
     </div> <!-- /container -->
